# django

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.rst  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
core/core/utils/: misc.py
core/project/settings/: __init__.py  base.py  custom.py  docker.py
core/project/settings/templates/: settings.dev.py
